DevOps_Project&Troubleshooting/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskboard-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: taskboard.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: taskboard-taskboard-backend
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: taskboard-frontend
            port:
              number: 80
